# bonnet

./: .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  README.md  test.sh
deploy_cpp/: README.md
deploy_cpp/lib/include/: net.hpp  netTRT.hpp
deploy_cpp/lib/src/: net.cpp  netTRT.cpp
deploy_cpp/ros/bonnet/: CMakeLists.txt  package.xml
deploy_cpp/ros/bonnet/config/: cnn_cfg.yaml  topic_cfg.yaml
deploy_cpp/ros/bonnet/include/: bonnet_handler.hpp
deploy_cpp/ros/bonnet/launch/: bonnet.launch  bonnet_debug.launch
deploy_cpp/ros/bonnet/src/: bonnet_handler.cpp
deploy_cpp/src/lib/: CMakeLists.txt  package.xml
deploy_cpp/src/lib/include/: bonnet.hpp  net.hpp  netTF.hpp  netTRT.hpp
deploy_cpp/src/lib/src/: bonnet.cpp  net.cpp  netTF.cpp  netTRT.cpp
deploy_cpp/src/ros/: CMakeLists.txt  package.xml
deploy_cpp/src/ros/config/: cnn_cfg.yaml  topic_cfg.yaml
deploy_cpp/src/ros/include/: bonnet_handler.hpp
deploy_cpp/src/ros/launch/: bonnet_debug.launch  bonnet_run.launch
deploy_cpp/src/ros/src/: bonnet_handler.cpp  bonnet_node.cpp
deploy_cpp/src/standalone/: CMakeLists.txt  package.xml
deploy_cpp/src/standalone/src/: cnn_use_pb.cpp  cnn_video_pb.cpp  session.cpp
deploy_cpp/standalone/: CMakeLists.txt
deploy_cpp/standalone/src/: cnn_use_pb.cpp  cnn_video_pb.cpp  session.cpp
train_py/: README.md  cnn_dataset_performance.py  cnn_freeze.py  cnn_graph_log.py  cnn_plant_features.py  cnn_train.py  cnn_use.py  cnn_use_pb.py  cnn_use_pb_tensorRT.py  cnn_video.py  cnn_video_pb.py  cnn_video_pb_tensorRT.py  requirements.txt
train_py/arch/: ERF.py  abstract_net.py  bonnet.py  bonnet_inception.py  bonnet_mobilenets.py  layer.py  msg.py  uERF.py
train_py/cfg/cityscapes/: data.yaml  net_bonnet.yaml  net_bonnet_inception.yaml  net_bonnet_mobilenets.yaml  net_uERF.yaml  train_ERF.yaml  train_bonnet.yaml  train_bonnet_inception.yaml  train_bonnet_mobilenets.yaml
train_py/cfg/cwc/: data.yaml  net_ERF.yaml  net_bonnet.yaml  train_ERF.yaml  train_bonnet.yaml  train_uERF.yaml
train_py/cfg/persons/: data.yaml  net_bonnet_inception.yaml  train_bonnet_inception.yaml
train_py/cfg/synthia/: data.yaml  net_bonnet.yaml  train_ERF.yaml  train_bonnet.yaml  train_uERF.yaml
train_py/dataset/: abstract_dataset.py  augment_data.py  cityscapes.py  general.py  plant_features.py
train_py/dataset/aux_scripts/: README.md  cityscapes_preprocess.py  cwc_preprocess.py  cwc_preprocess.yaml  cwc_preprocess_newstruct.py  cwc_preprocess_newstruct_nir.py  persons_preprocess.py  synthia_preprocess.py  synthia_preprocess.yaml  util.py
train_py/generate_dataset/: README.md  create_bonnet_dataset.py
train_py/jobs/: template.sh
